# rust_prime

./: Cargo.toml  README.md  get_timings.sh  mutex_test.rs  prime_buffer.rs  prime_buffer_mt_ptc.rs
src/: lib.rs  main.rs
